force-app/main/default/objects/KimbleOne__JobArchive__c/KimbleOne__JobArchive__c.object-meta.xml
<CustomObject>
    <label>Job Archive</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Archives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>