force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__DedupeParameter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DedupeParameter__c</fullName>
    <externalId>true</externalId>
    <label>DedupeParameter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>