force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__DMLStatementCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DMLStatementCount__c</fullName>
    <label>DMLStatementCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>