force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__JobArchiveRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__JobArchiveRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobArchiveRule</label>
    <referenceTo>KimbleOne__JobArchiveRule__c</referenceTo>
    <relationshipLabel>Job Archives</relationshipLabel>
    <relationshipName>JobArchives</relationshipName>
    <type>Lookup</type>
</CustomField>