force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__NumberOfRetries__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfRetries__c</fullName>
    <label>Number Of Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>