force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__ProcessContext__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProcessContext__c</fullName>
    <label>Process Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>