force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__RunImmediately__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RunImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Immediately</label>
    <type>Checkbox</type>
</CustomField>