force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__RunningTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RunningTime__c</fullName>
    <label>Running Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>