force-app/main/default/objects/KimbleOne__JobArchive__c/fields/KimbleOne__SOQLQueryCount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SOQLQueryCount__c</fullName>
    <label>SOQLQueryCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>